# sunday_class

./: readme.md
binance_app/: .env  pyproject.toml
binance_app/src/binance_app/: __init__.py  app.py
class_work/class_01/: readme.md
class_work/class_03/: pyproject.toml
class_work/class_03/src/class_03/: __init__.py  main.py
class_work/class_04/: pyproject.toml
class_work/class_04/src/class_04/: __init__.py  main.py
class_work/class_05/: .env  pyproject.toml
class_work/class_05/src/class_05/: __init__.py  main2.py
class_work/class_06/: .env  README.md  pyproject.toml
class_work/class_06/src/class_06/: __init__.py
class_work/class_07/: README.md  pyproject.toml
class_work/class_07/src/class_07/: __init__.py  app.py  connection.py  main.py
class_work/class_08/: pyproject.toml
class_work/class_08/src/class_08/: __init__.py  assignment1.py  assignment2.py  main.py  output_guard.py
class_work/class_09/: pyproject.toml
class_work/class_09/src/class_09/: __init__.py  app.py  connection.py
class_work/class_10/: README.md  pyproject.toml
class_work/class_10/src/class_10/: __init__.py  exercise1.py  exercise2.py  exercise3.py  main.py
poet_agent/: .env  pyproject.toml
poet_agent/src/poet_agent/: __init__.py  poetry.py
shopping_agent/: pyproject.toml
shopping_agent/src/shopping_agent/: shopping_agent.py
translator_agent/: pyproject.toml
translator_agent/src/translator_agent/: agent.py
