[project]
name = "poet-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.3",
    "dotenv>=0.9.9",
    "openai-agents>=0.2.3",
]

[project.scripts]
poet-agent = "poet_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
