[project]
name = "class-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.3",
    "rich>=14.1.0",
]

[project.scripts]
class-04 = "class_04:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
