[project]
name = "class-06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.3",
]

[project.scripts]
class-06 = "class_06:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
