[project]
name = "class-08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.8",
    "rich>=14.1.0",
]

[project.scripts]
class-08 = "class_08:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
