[project]
name = "class-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.8",
    "rich>=14.1.0",
]

[project.scripts]
class-09 = "class_09:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
